# f1telemetrybot

./: 20220927 Intro to F1 Data Analysis with Python.ipynb  Jasper Notebook.ipynb  LICENSE  README.md  bot.py  f1.ipynb  f1.py  preseasontesting.ipynb  pyproject.toml  replit_zip_error_log.txt  requirements.txt  standings.ipynb  strategies.ipynb  toboxornot.ipynb
.cache/replit/nix/: env.json
.upm/: store.json
cache/2022/2022-07-24_French_Grand_Prix/2022-07-23_Qualifying/: driver_info.ff1pkl  race_control_messages.ff1pkl  session_status_data.ff1pkl  timing_app_data.ff1pkl  timing_data.ff1pkl  weather_data.ff1pkl
