[tool.poetry]
name = "repl_nix_f1telemetrybot"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^2.0.0"
Flask = "^2.2.2"
matplotlib = "^3.6.1"
numpy = "^1.23.3"
pandas = "^1.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
